update table responsive

--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -18,102 +18,105 @@
             <div class="h5">Cashload</div>
           </div>
           <div class="card-body">
-            <table class="table  table-bordered table-hover">
-              <thead class="thead-light">
-                <tr>
-                  <th scope="col" class="text-center">#</th>
-                  <th scope="col" class="text-center">ເວລາ</th>
-                  <th scope="col" class="text-center">ຍອດເປີດ</th>
-                  <th scope="col" class="text-center">ອະນຸມັດໂດຍ</th>
-                  <th scope="col" class="text-center">ອະນຸມັດເປີດຍອດ</th>
-                  <th scope="col" class="text-center">ຍອດຂາຍເງິນສົດ</th>
-                  <th scope="col" class="text-center">ຍອດຂາຍຜ່ານທະນາຄານ</th>
-                  <th scope="col" class="text-center">ລວມຍອດເງິນສົດ</th>
-                  <th scope="col" class="text-center">ເງິນສົດຕົວຈິງ</th>
-                  <th scope="col" class="text-center">Balance</th>
-                  <th scope="col" class="text-center">ຍອດຂາຍທັງໝົດ</th>
-                  <th scope="col" class="text-center">ພະນັກງານຂາຍ</th>
-                  <th scope="col" class="text-center">ເວລາປີດ</th>
-                  <th scope="col" class="text-center">ອະນຸມັດໂດຍ</th>
-                  <th scope="col" class="text-center">ອະນຸມັດປິດຍອດ</th>
-                  <th scope="col" class="text-center">ອະນຸມັດປີດຍອດ</th>
-                  <th scope="col" class="text-center">ໝາຍເຫດ</th>
-                  <th scope="col" class="text-center">ປິດການຂາຍ</th>
-                  <th scope="col" class="text-center">ຈັດການ</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let cash of cashloads ; let i = index;">
+            <div class="table-responsive">
+              <table class="table  table-bordered table-hover">
+                <thead class="thead-light">
+                  <tr>
+                    <th scope="col" class="text-center">#</th>
+                    <th scope="col" class="text-center">ເວລາ</th>
+                    <th scope="col" class="text-center">ຍອດເປີດ</th>
+                    <th scope="col" class="text-center">ອະນຸມັດໂດຍ</th>
+                    <th scope="col" class="text-center">ອະນຸມັດເປີດຍອດ</th>
+                    <th scope="col" class="text-center">ຍອດຂາຍເງິນສົດ</th>
+                    <th scope="col" class="text-center">ຍອດຂາຍຜ່ານທະນາຄານ</th>
+                    <th scope="col" class="text-center">ລວມຍອດເງິນສົດ</th>
+                    <th scope="col" class="text-center">ເງິນສົດຕົວຈິງ</th>
+                    <th scope="col" class="text-center">Balance</th>
+                    <th scope="col" class="text-center">ຍອດຂາຍທັງໝົດ</th>
+                    <th scope="col" class="text-center">ພະນັກງານຂາຍ</th>
+                    <th scope="col" class="text-center">ເວລາປີດ</th>
+                    <th scope="col" class="text-center">ອະນຸມັດໂດຍ</th>
+                    <th scope="col" class="text-center">ອະນຸມັດປິດຍອດ</th>
+                    <th scope="col" class="text-center">ອະນຸມັດປີດຍອດ</th>
+                    <th scope="col" class="text-center">ໝາຍເຫດ</th>
+                    <th scope="col" class="text-center">ປິດການຂາຍ</th>
+                    <th scope="col" class="text-center">ຈັດການ</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let cash of cashloads ; let i = index;">
 
-                  <td class="text-center align-middle"> {{ i+1 }}</td>
-                  <td class="text-left align-middle">{{ cash.loadDateTime| date: 'dd-MMM-yyyy H:mm:ss' }}
-                  </td>
-                  <td class="text-right align-middle">{{ cash.initBalance | number }}</td>
-                  <td class="text-center align-middle">{{ cash.openAuthorizedNameBy }}</td>
-                  <td class="text-center align-middle" *ngIf="cash.loadApproved == 1;else loadApprovedTag">
-                    <img mat-raised-button src=" ../../../assets/icons/Check_green_icon.svg.png"
-                      style="max-width: 20px;cursor: pointer;">
-                  </td>
-                  <ng-template #loadApprovedTag>
-                    <td class="text-center align-middle" (click)="approvedLoadCash(cash.id)">
-                      <img mat-raised-button src="../../../assets/icons/cancel.svg"
+                    <td class="text-center align-middle"> {{ i+1 }}</td>
+                    <td class="text-left align-middle">{{ cash.loadDateTime| date: 'dd-MMM-yyyy H:mm:ss' }}
+                    </td>
+                    <td class="text-right align-middle">{{ cash.initBalance | number }}</td>
+                    <td class="text-center align-middle">{{ cash.openAuthorizedNameBy }}</td>
+                    <td class="text-center align-middle" *ngIf="cash.loadApproved == 1;else loadApprovedTag">
+                      <img mat-raised-button src=" ../../../assets/icons/Check_green_icon.svg.png"
                         style="max-width: 20px;cursor: pointer;">
                     </td>
-                  </ng-template>
+                    <ng-template #loadApprovedTag>
+                      <td class="text-center align-middle" (click)="approvedLoadCash(cash.id)">
+                        <img mat-raised-button src="../../../assets/icons/cancel.svg"
+                          style="max-width: 20px;cursor: pointer;">
+                      </td>
+                    </ng-template>
 
 
-                  <td class="text-right align-middle">{{ cash.eodCashBalance | number }}</td>
-                  <td class="text-right align-middle">{{ cash.eodBankBalance | number }}</td>
-                  <td class="text-right align-middle">{{ cash.cashBalance | number }}</td>
-                  <td class="text-right align-middle">{{ cash.cashInHands | number }}</td>
-                  <td class="text-right align-middle">{{ cash.closeBalance | number }}</td>
-                  <td class="text-right align-middle">{{ cash.totalSellAmount | number }}</td>
-                  <td class="text-center align-middle">{{ cash.sellerName }}</td>
-                  <td class="text-left align-middle" *ngIf="cash.closeDatetime; else nonclose">
-                    {{ cash.closeDatetime| date: 'dd-MMM-yyyy H:mm:ss' }}</td>
-                  <ng-template #nonclose>
-                    <td></td>
-                  </ng-template>
-                  <td class="text-center align-middle">{{ cash.closeAuthorizedNameBy }}</td>
-                  <td class="text-center align-middle" *ngIf="cash.closed == 1 ; else closeStat">Closed</td>
-                  <ng-template #closeStat>
-                    <td class="text-center align-middle">Open</td>
-                  </ng-template>
+                    <td class="text-right align-middle">{{ cash.eodCashBalance | number }}</td>
+                    <td class="text-right align-middle">{{ cash.eodBankBalance | number }}</td>
+                    <td class="text-right align-middle">{{ cash.cashBalance | number }}</td>
+                    <td class="text-right align-middle">{{ cash.cashInHands | number }}</td>
+                    <td class="text-right align-middle">{{ cash.closeBalance | number }}</td>
+                    <td class="text-right align-middle">{{ cash.totalSellAmount | number }}</td>
+                    <td class="text-center align-middle">{{ cash.sellerName }}</td>
+                    <td class="text-left align-middle" *ngIf="cash.closeDatetime; else nonclose">
+                      {{ cash.closeDatetime| date: 'dd-MMM-yyyy H:mm:ss' }}</td>
+                    <ng-template #nonclose>
+                      <td></td>
+                    </ng-template>
+                    <td class="text-center align-middle">{{ cash.closeAuthorizedNameBy }}</td>
+                    <td class="text-center align-middle" *ngIf="cash.closed == 1 ; else closeStat">Closed</td>
+                    <ng-template #closeStat>
+                      <td class="text-center align-middle">Open</td>
+                    </ng-template>
 
-                  <td class="text-center align-middle" *ngIf="cash.closeApproved == 1;else closeApprovedTag">
-                    <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
-                      style="max-width: 20px;cursor: pointer;">
-                  </td>
-                  <ng-template #closeApprovedTag>
-                    <td class="text-center align-middle" (click)="closeApproved(cash)">
-                      <img mat-raised-button src="../../../assets/icons/cancel.svg"
+                    <td class="text-center align-middle" *ngIf="cash.closeApproved == 1;else closeApprovedTag">
+                      <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
                         style="max-width: 20px;cursor: pointer;">
                     </td>
-                  </ng-template>
+                    <ng-template #closeApprovedTag>
+                      <td class="text-center align-middle" (click)="closeApproved(cash)">
+                        <img mat-raised-button src="../../../assets/icons/cancel.svg"
+                          style="max-width: 20px;cursor: pointer;">
+                      </td>
+                    </ng-template>
 
-                  <td class="text-left align-middle">{{ cash.note }}</td>
-                  <td class="text-center align-middle" *ngIf="cash.closed === 1; else nonClose"><button mat-flat-button
-                      color="warn" style="width: 100%;" disabled (click)="openCloseBalance(cash)">ປິດ</button>
-                  </td>
-
-                  <ng-template #nonClose>
-                    <td class="text-center align-middle"><button mat-flat-button color="warn" style="width: 100%;"
+                    <td class="text-left align-middle">{{ cash.note }}</td>
+                    <td class="text-center align-middle" *ngIf="cash.closed === 1; else nonClose"><button
+                        mat-flat-button color="warn" style="width: 100%;" disabled
                         (click)="openCloseBalance(cash)">ປິດ</button>
                     </td>
-                  </ng-template>
-                  <td class="text-center align-middle" *ngIf="cash.closed === 1; else nonRemove">
-                    <img mat-raised-button src="../../../assets/icons/baseline-delete-24px.svg"
-                      style="width: 20px;cursor: pointer;">
-                  </td>
-                  <ng-template #nonRemove>
-                    <td class="text-center align-middle">
+
+                    <ng-template #nonClose>
+                      <td class="text-center align-middle"><button mat-flat-button color="warn" style="width: 100%;"
+                          (click)="openCloseBalance(cash)">ປິດ</button>
+                      </td>
+                    </ng-template>
+                    <td class="text-center align-middle" *ngIf="cash.closed === 1; else nonRemove">
                       <img mat-raised-button src="../../../assets/icons/baseline-delete-24px.svg"
-                        (click)="removeCashLoad(cash)" style="width: 20px;cursor: pointer;">
+                        style="width: 20px;cursor: pointer;">
                     </td>
-                  </ng-template>
-                </tr>
-              </tbody>
-            </table>
+                    <ng-template #nonRemove>
+                      <td class="text-center align-middle">
+                        <img mat-raised-button src="../../../assets/icons/baseline-delete-24px.svg"
+                          (click)="removeCashLoad(cash)" style="width: 20px;cursor: pointer;">
+                      </td>
+                    </ng-template>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
