--- a/src/app/pages/orders-history/orders-history.component.html
+++ b/src/app/pages/orders-history/orders-history.component.html
@@ -6,79 +6,66 @@
   </mat-card-header>
   <mat-card-content>
     <div style="overflow-y: auto;overflow-x: hidden;max-height: 600px;">
-      <table class="table table-bordered ">
-        <thead class="thead-light">
-          <tr>
-            <th scope="col" class="text-center">#</th>
-            <th scope="col" class="text-center">Q</th>
-            <th scope="col" class="text-center">ເວລາສັ້ງ</th>
-            <th scope="col" class="text-center">ເວລາແລ້ວ</th>
-            <th scope="col" class="text-center">ເລກບິນ</th>
-            <th scope="col" class="text-center">ເລກອ້າງອິງ</th>
-            <th scope="col" class="text-center">ຍອດລວມ</th>
-            <th scope="col" class="text-center">ປະເພດການຈ່າຍ</th>
-            <th scope="col" class="text-center">ສະຖານະ</th>
-            <th scope="col" class="text-center">ສະຖານະ</th>
-            <th scope="col" class="text-center">ເຫດຜົນຍົກເລິກ</th>
-            <th scope="col" class="text-center">ລາຍການອາຫານ</th>
-            <th scope="col" class="text-center">ຜູ້ຂາຍ</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let order of orders | async; let i = index">
-            <td class="text-center">{{ i+1 }}</td>
-            <td class="text-center">{{ order.ticket }}</td>
-            <td class="text-center">{{ order.orderDateTime.toDate() | date: 'dd-MMM-yyyy H:mm:ss' }}</td>
-            <td class="text-center" *ngIf="order.orderFinishTime ;else notFinish">
-              {{ order.orderFinishTime.toDate() | date: 'dd-MMM-yyyy H:mm:ss' }}</td>
-            <ng-template #notFinish>
-              <td class="text-center">Processing</td>
-            </ng-template>
-            <td class="text-center">{{ order.invoiceno }}</td>
-            <td class="text-center">{{ order.refno }}</td>
-            <td class="text-right">{{ order.grandtotal |number }}</td>
-            <td class="text-center">{{ order.paymentType }}</td>
+      <div class="table-responsive">
+        <table class="table table-bordered ">
+          <thead class="thead-light">
+            <tr>
+              <th scope="col" class="text-center">#</th>
+              <th scope="col" class="text-center">Q</th>
+              <th scope="col" class="text-center">ເວລາສັ້ງ</th>
+              <th scope="col" class="text-center">ເວລາແລ້ວ</th>
+              <th scope="col" class="text-center">ເລກບິນ</th>
+              <th scope="col" class="text-center">ເລກອ້າງອິງ</th>
+              <th scope="col" class="text-center">ຍອດລວມ</th>
+              <th scope="col" class="text-center">ປະເພດການຈ່າຍ</th>
+              <th scope="col" class="text-center">ສະຖານະ</th>
+              <th scope="col" class="text-center">ສະຖານະ</th>
+              <th scope="col" class="text-center">ເຫດຜົນຍົກເລິກ</th>
+              <th scope="col" class="text-center">ລາຍການອາຫານ</th>
+              <th scope="col" class="text-center">ຜູ້ຂາຍ</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let order of orders | async; let i = index">
+              <td class="text-center">{{ i+1 }}</td>
+              <td class="text-center">{{ order.ticket }}</td>
+              <td class="text-center">{{ order.orderDateTime.toDate() | date: 'dd-MMM-yyyy H:mm:ss' }}</td>
+              <td class="text-center" *ngIf="order.orderFinishTime ;else notFinish">
+                {{ order.orderFinishTime.toDate() | date: 'dd-MMM-yyyy H:mm:ss' }}</td>
+              <ng-template #notFinish>
+                <td class="text-center">Processing</td>
+              </ng-template>
+              <td class="text-center">{{ order.invoiceno }}</td>
+              <td class="text-center">{{ order.refno }}</td>
+              <td class="text-right">{{ order.grandtotal |number }}</td>
+              <td class="text-center">{{ order.paymentType }}</td>
 
-            <ng-container [ngSwitch]="order.status">
-              <td class="text-center" *ngSwitchCase="'completed'">
-                <img src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;">
-              </td>
-              <td class="text-center" *ngSwitchCase="'cancel'">
-                <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;">
-              </td>
-              <td class="text-center" *ngSwitchDefault>
-                <img src="../../../assets/icons/lg.dual-gear-loading-icon.gif" style="max-width: 30px;cursor: pointer;">
-              </td>
-            </ng-container>
+              <ng-container [ngSwitch]="order.status">
+                <td class="text-center" *ngSwitchCase="'completed'">
+                  <img src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;">
+                </td>
+                <td class="text-center" *ngSwitchCase="'cancel'">
+                  <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;">
+                </td>
+                <td class="text-center" *ngSwitchDefault>
+                  <img src="../../../assets/icons/lg.dual-gear-loading-icon.gif"
+                    style="max-width: 30px;cursor: pointer;">
+                </td>
+              </ng-container>
 
-            <!--
-            <td class="text-center" *ngIf="order.status=='completed';cancelStatus">
-              <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png"
-                style="max-width: 20px;cursor: pointer;">
-            </td>
-            <ng-template #cancelStatus>
+              <td class="text-center">{{ order.status }}</td>
+              <td class="text-center" *ngIf="order.remarks; else noreason">{{ order.remarks }}</td>
+              <ng-template #noreason>
+                <td class="text-center">N/A</td>
+              </ng-template>
               <td class="text-center">
-                <img mat-raised-button src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;">
+                <button mat-raised-button color="primary" (click)="openOrderDetail(order)">ກວດສອບລາຍການ</button>
               </td>
-            </ng-template>
-            -->
-
-
-
-
-
-            <td class="text-center">{{ order.status }}</td>
-            <td class="text-center" *ngIf="order.remarks; else noreason">{{ order.remarks }}</td>
-            <ng-template #noreason>
-              <td class="text-center">N/A</td>
-            </ng-template>
-            <td class="text-center">
-              <button mat-raised-button color="primary" (click)="openOrderDetail(order)">ກວດສອບລາຍການ</button>
-            </td>
-            <td class="text-center">{{ order.username }}</td>
-          </tr>
-        </tbody>
-      </table>
+              <td class="text-center">{{ order.username }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </mat-card-content>
 </mat-card>
