--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -16,52 +16,53 @@
         <button mat-raised-button color="primary" style="width: 100%;" (click)="reloadProduct()">Reload</button>
       </div>
     </div>
+    <div class="table-responsive">
+      <table class="table table-bordered product_detail">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col" class="text-center" style="width: 30px;">ລະຫັດ</th>
+            <th scope="col" class="text-left">ລະຫັດບາໂຄດ</th>
+            <th scope="col" class="text-center">ລະຫັດສິນຄ້າ</th>
+            <th scope="col" class="text-center">ລະຫັດອາຫານ</th>
+            <th scope="col" class="text-center">ຊື່ສິນຄ້າ</th>
+            <th scope="col" class="text-center">ປະເພດ</th>
+            <th scope="col" class="text-center">ຕົ້ນທຶນ</th>
+            <th scope="col" class="text-center">ຍອດຕໍ່າສຸດ</th>
+            <th scope="col" class="text-center">ຍອດປະຈຸບັນ</th>
+            <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
+            <th scope="col" class="text-center">ຜູ້ສະໜອງ</th>
+            <th scope="col" class="text-center">ເຂົ້າສາງວັນທີ</th>
+            <th scope="col" class="text-center">ຈັດການ</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let product of productsShow | product: searchProduct"
+            [ngClass]="{'bg-danger': product.currentQuantity == 0 || product.minimumQuantity > product.currentQuantity}">
+            <td class="text-center align-middle" (click)="updateProduct(product)" style="cursor: pointer">
+              {{ product.pid }}</td>
+            <td class="text-left align-middle">{{ product.barcode }}</td>
+            <td class="text-left align-middle">{{ product.product_code }}</td>
+            <td class="text-center align-middle" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
+            <ng-template #nonFoodId>
+              <td class="text-center align-middle">N/A</td>
+            </ng-template>
+            <td class="text-left align-middle">{{ product.product_name }}</td>
+            <td class="text-left align-middle">{{ product.category_name }}</td>
+            <td class="text-right align-middle">{{ product.cost |number }}</td>
+            <td class="text-center align-middle">{{ product.minimum |number }}</td>
+            <td class="text-center align-middle">{{ product.currentQuantity |number }}</td>
+            <td class="text-center align-middle">{{ product.unit_name }}</td>
+            <td class="text-left align-middle">{{ product.supplier_name }}</td>
+            <td class="text-center align-middle">{{ product.createdAt |date }}</td>
+            <td class="text-center align-middle"><button mat-raised-button color="warn"
+                (click)="deleteProduct(product)">Delete</button><span class="spaceDiv"></span><button mat-raised-button
+                color="primary" (click)="updateProduct(product)">Update</button></td>
+          </tr>
+        </tbody>
+        <tfoot class="thead-light">
 
-    <table class="table table-bordered product_detail">
-      <thead class="thead-light">
-        <tr>
-          <th scope="col" class="text-center" style="width: 30px;">ລະຫັດ</th>
-          <th scope="col" class="text-left">ລະຫັດບາໂຄດ</th>
-          <th scope="col" class="text-center">ລະຫັດສິນຄ້າ</th>
-          <th scope="col" class="text-center">ລະຫັດອາຫານ</th>
-          <th scope="col" class="text-center">ຊື່ສິນຄ້າ</th>
-          <th scope="col" class="text-center">ປະເພດ</th>
-          <th scope="col" class="text-center">ຕົ້ນທຶນ</th>
-          <th scope="col" class="text-center">ຍອດຕໍ່າສຸດ</th>
-          <th scope="col" class="text-center">ຍອດປະຈຸບັນ</th>
-          <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
-          <th scope="col" class="text-center">ຜູ້ສະໜອງ</th>
-          <th scope="col" class="text-center">ເຂົ້າສາງວັນທີ</th>
-          <th scope="col" class="text-center">ຈັດການ</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of productsShow | product: searchProduct"
-          [ngClass]="{'bg-danger': product.currentQuantity == 0 || product.minimumQuantity > product.currentQuantity}">
-          <td class="text-center align-middle" (click)="updateProduct(product)" style="cursor: pointer">
-            {{ product.pid }}</td>
-          <td class="text-left align-middle">{{ product.barcode }}</td>
-          <td class="text-left align-middle">{{ product.product_code }}</td>
-          <td class="text-center align-middle" *ngIf="product.foodId; else nonFoodId">{{ product.foodId }}</td>
-          <ng-template #nonFoodId>
-            <td class="text-center align-middle">N/A</td>
-          </ng-template>
-          <td class="text-left align-middle">{{ product.product_name }}</td>
-          <td class="text-left align-middle">{{ product.category_name }}</td>
-          <td class="text-right align-middle">{{ product.cost |number }}</td>
-          <td class="text-center align-middle">{{ product.minimum |number }}</td>
-          <td class="text-center align-middle">{{ product.currentQuantity |number }}</td>
-          <td class="text-center align-middle">{{ product.unit_name }}</td>
-          <td class="text-left align-middle">{{ product.supplier_name }}</td>
-          <td class="text-center align-middle">{{ product.createdAt |date }}</td>
-          <td class="text-center align-middle"><button mat-raised-button color="warn"
-              (click)="deleteProduct(product)">Delete</button><span class="spaceDiv"></span><button mat-raised-button
-              color="primary" (click)="updateProduct(product)">Update</button></td>
-        </tr>
-      </tbody>
-      <tfoot class="thead-light">
-
-      </tfoot>
-    </table>
+        </tfoot>
+      </table>
+    </div>
   </mat-card-content>
 </mat-card>
