--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -30,7 +30,7 @@
         </button>
       </div>
 
-      <div fxShow="true" fxHide.gt-sm="true">
+      <div fxShow="true" fxHide.gt-md="true">
         <mat-menu #smallAppMenu>
           <a mat-menu-item>
             <mat-icon>account_box</mat-icon>
