update dashboard reports

--- a/src/app/dialogs/close-balance/close-balance.component.html
+++ b/src/app/dialogs/close-balance/close-balance.component.html
@@ -25,12 +25,16 @@
       <input type="number" class="form-control" readonly formControlName="cashBalance" id="cashBalance">
     </div>
     <div class="form-group col-md-9">
-      <label for="cashInHands">ຍອດລວມເງິນສົດ ຕົວຈິງ</label>
+      <label for="cashInHands">ຍອດລວມເງິນສົດ ທີ້ຕ້ອງສົ່ງ</label>
       <input type="number" class="form-control" readonly formControlName="cashInHands" id="cashInHands">
     </div>
     <div class="form-group col-md-9">
       <label for="closeBalance">ປິດຍອດຂາຍ</label>
       <input type="number" class="form-control" readonly formControlName="closeBalance" id="closeBalance">
+    </div>
+    <div class="form-group col-md-9">
+      <label for="terminalId">ກະແສັດເງິນ</label>
+      <input type="number" class="form-control" readonly formControlName="terminalId" id="terminalId">
     </div>
     <div class="form-group col-md-9">
       <label for="note">ໝາຍເຫດ</label>
